@@ -1,5 +1,12 @@
 2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* flumotion/admin/gtk/adminwindow.py:
+	  Make docstrings adhere to style guide.
+	  Document the fact that _componentDo can also take a None state,
+	  in which case it will look at the current selection.
+
+2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* flumotion/admin/command/common.py:
 	* flumotion/admin/command/component.py:
 	* flumotion/admin/command/manager.py:
